# dailyClock

./: Cargo.toml  parsed_workouts.json
src/: main.rs  models.rs  routines.rs  schedule.json  workouts.json
