[package]
name = "dailyPlanner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
chrono = "0.4.40"
egui-aesthetix = { version = "0.2.4", features = ["nord"] }
eframe = "0.31.1"
egui_extras = "0.31.1"
reqwest = { version = "0.12.14", features = ["blocking", "json"] }